fix cookie-consent visibility

--- a/src/scss/component/_cookie-consent.scss
+++ b/src/scss/component/_cookie-consent.scss
@@ -31,7 +31,6 @@
   padding: spacer('s');
   pointer-events: all;
   text-align: center;
-  transform: translateY(200%);
 
   &--slidein {
     animation: slidein config('duration', $transition) forwards;
